--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,14 @@
 * {
   -webkit-tap-highlight-color: transparent !important;
   -webkit-touch-callout: none !important;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+}
+
+/* Allow text selection for inputs and text areas */
+input, textarea, [contenteditable] {
+  -webkit-user-select: text !important;
+  -moz-user-select: text !important;
+  -ms-user-select: text !important;
+  user-select: text !important;
 }
 
 /* Custom global styles */
